# sr-manager

./: .gitignore  LICENSE  builder.py
StarRails/: Manifest.toml  Project.toml
StarRails/src/: StarRails.jl  常数.jl  标签.jl  随机.jl  颜色.jl
StarRails/src/事件/: 事件.jl  使用技能.jl  发动攻击.jl  发动治疗.jl  回复生命.jl  损失生命.jl  消灭.jl  消耗战技点.jl  消耗能量.jl  致命.jl  获得战技点.jl  获得能量.jl  解除负面状态.jl  进入战斗.jl  造成击破.jl  造成削韧.jl
StarRails/src/持续状态/: 冻结.jl  减速.jl  加速.jl  嘲讽.jl  回合开始.jl  回合结束.jl  复苏.jl  属性提升.jl  属性降低.jl  抗性降低.jl  护盾.jl  持续状态.jl  攻击强效.jl  灼烧.jl  脱离持续状态.jl  裂伤.jl  触电.jl  附加持续状态.jl  风化.jl
StarRails/src/控制台/: 战场交互界面.jl  界面控制.jl  血条.jl  选择角色界面.jl
StarRails/src/组件/: 上下文.jl  产生效果.jl  使用技能.jl  全体攻击.jl  单体攻击.jl  发动条件.jl  变量定义.jl  战场.jl  战场队伍.jl  扩散攻击.jl  技能.jl  技能模板.jl  技能解析器.jl  指定目标.jl  游戏流程.jl  角色.jl  角色模板.jl  触发时机.jl  进度.jl  速度条.jl  随机攻击.jl
StarRails/src/角色/: 角色数据库.jl
StarRails/src/角色/星穹列车/: 三月七.jl  丹恒.jl  姬子.jl  开拓者▪物理.jl  开拓者物理.jl  瓦尔特.jl
StarRails/src/角色/贝洛伯格/: 克拉拉.jl  娜塔莎.jl  布洛妮娅.jl  开拓者火.jl  桑博.jl  虎克.jl
StarRails/src/角色/黑塔空间站/: 艾丝妲.jl  阿兰.jl  黑塔.jl
sr-manager/: CMakeLists.txt  main.cpp
sr-manager/battle/: AddEffect.hpp  Attack.hpp  Battle.hpp  BattleUnit.cpp  BattleUnit.hpp  Break.hpp  CostSkillPoint.hpp  Die.hpp  Dying.hpp  EmitSkill.hpp  Game.hpp  GameStart.hpp  GetSkillPoint.hpp  HpDown.hpp  HpUp.hpp  MpDown.hpp  MpUp.hpp  Procedure.hpp  ReduceToughness.hpp  RemoveDebuff.hpp  SpeedBar.hpp  TurnBegin.hpp  TurnEnd.hpp
sr-manager/cli/: BattleCli.hpp  CreatorCli.hpp  HpBar.hpp  Painter.hpp
sr-manager/script/: definition.yaml
sr-manager/script/characters/season0/: Trailblazer_physical.yaml
sr-manager/utils/: Character.hpp  CharacterData.hpp  Effect.hpp  EffectList.cpp  EffectList.hpp  Random.cpp  Random.hpp  Skill.hpp  Trigger.hpp  TriggerList.hpp  Utils.hpp
sr-manager/utils/Fire/Asta/: Asta.hpp  AstaAeq.hpp  AstaPassive.hpp
sr-manager/utils/Fire/Himeko/: Himeko.hpp  HimekoAeq.hpp  HimekoPassive.hpp  HimekoStars.hpp
sr-manager/utils/Fire/TailblazerFire/: TailblazerFire.hpp  TailblazerFireSkills.hpp
sr-manager/utils/Ice/Herta/: Herta.hpp  HertaAeq.hpp  HertaPassive.hpp
sr-manager/utils/Ice/March7th/: March7th.hpp  March7thAeq.hpp  March7thPassive.hpp  March7thStars.hpp
sr-manager/utils/Lightning/Arlan/: Arlan.hpp  ArlanAeq.hpp  ArlanPassive.hpp
sr-manager/utils/ai/: Target.hpp
sr-manager/utils/effects/: AttackUpgrade.hpp  Bleed.hpp  Burn.hpp  DefDown.hpp  Fast.hpp  Freeze.hpp  ResistDown.hpp  Shield.hpp  Shock.hpp  Slow.hpp  Taunt.hpp  TempAtk.hpp  TempDef.hpp  TempPen.hpp  Unyielding.hpp  WindShear.hpp
sr-manager/utils/imaginary/Welt/: Welt.hpp  WeltAeq.hpp  WeltPassive.hpp  WeltStars.hpp
sr-manager/utils/physical/TailblazerPhysical/: ADestructingGlance.hpp  AFallingStar.hpp  ATrailblazingWill.hpp  AnUnwillingHost.hpp  FarewellHit.hpp  ImmortalThirdStrike.hpp  PerfectPickoff.hpp  RipHomeRun.hpp  StardustAce.hpp  TailblazerPhysical.hpp
sr-manager/utils/wind/DanHeng/: CloudlancerArtNorthWind.hpp  CloudlancerArtTorrent.hpp  DanHeng.hpp  DanHengStars.hpp  EtherealDream.hpp  SplittingSpearhead.hpp  SuperiorityOfReach.hpp
template/: CMakeLists.txt
